--- a/css/style.css
+++ b/css/style.css
@@ -510,6 +510,21 @@ img {
     display: flex;
     align-items: center;
     justify-content: center;
+    
+}
+
+.customer-icon{
+    fill: #8E8F99;
+}
+
+.customer-link:hover,
+.customer-link:focus{
+    border-color: #404BBF;
+}
+
+.customer-link:hover .customer-icon,
+.customer-link:focus .customer-icon{
+    fill: #404BBF;
 }
 
 .customers-list{
